# readmigo-cn-repos

./: .gitignore  .npmrc  PROJECT.md  QUICKSTART.md  QWEN.md  README-update.txt  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json
.gitee/workflows/: build.yml  ci.yml  server-deploy.yml
apps/harmony-app/: AUDIOBOOK_IMPLEMENTATION.md  IMPLEMENTATION.md  README.md  build-profile.json5  hvigorfile.ts  oh-package.json5
apps/harmony-app/AppScope/: app.json5
apps/harmony-app/brand/: README.md  cn-localization-checklist.md  zh-CN-strings.md
apps/harmony-app/docs/: performance-budget.md
apps/harmony-app/entry/: build-profile.json5  hvigorfile.ts  oh-package.json5
apps/harmony-app/entry/src/main/cpp/: CMakeLists.txt
apps/harmony-app/hvigor/: hvigor-config.json5
apps/harmony-app/marketing/: screenshot-spec.md  social-media-copy.md  store-listing-ios-cn.md
brand/: README.md  sync-from-brand.sh
compliance/: STATUS.md
compliance/ai-service-filing/: 00-SOP.md  01-application-template.md  02-application-final.md
compliance/algorithm-filing/: 00-application.md
compliance/company-formation/: 00-decision.md
compliance/content-moderation/: 00-application.md
compliance/icp/: 00-SOP.md
compliance/policies/: content-moderation-policy.md  data-security-policy.md  minor-protection-template.md  minor-protection.md  user-agreement-template.md  user-agreement.md
docs/: 00-strategy.md  01-tech-selection.md  02-architecture.md  03-overseas-reuse.md  04-compliance.md  05-roadmap.md  06-harmony-cross-platform-faq.md  07-ai-coding.md  08-deveco-setup.md  10-domestic-stack-integration.md  11-readmigo-sync-matrix.md  12-fullstack-technical-spec.md  15-feature-parity-checklist.md  20-llm-adapter-implementation.md  25-napi-bridge-implementation.md  30-4-track-initiation-summary.md  40-gitee-repo-structure.md  50-execution-orchestration.md  BUILD-FIXES.md  COMPILATION-FIX.md  COMPILATION-LOG.md  DEVECO-BUILD.md  DEVECO-INSTALL.md  DEVECO-INSTALLING.md  HARMONY-SETUP.md
docs/architecture/: 01-repo-split-decision.md  02-server-cn-split-sop.md  03-target-architecture.md  04-native-engine-sync-strategy.md  05-autonomous-continuation-playbook.md
docs/architecture/templates/: mirror-badge-engine-to-gitee.yml  mirror-typesetting-to-gitee.yml
docs/content/: 00-acquisition-strategy.md
docs/deployment/: 01-harmonyos-signing.md  02-real-device-deploy.md
docs/devices/: procurement-list.md
docs/native/: 00-engine-sync-flow.md
docs/operations/: 02-incident-response-sop.md
docs/release/: 01-huawei-appgallery-submission.md
docs/reviews/: 22w-final-retrospective.md  W1-W4-review-2026-05-02.md  W7-W8-review-2026-05-02.md
docs/team/: jd-backend-engineer.md  jd-designer.md  jd-harmonyos-engineer.md
harmony-app/: IMPLEMENTATION.md  README.md  hvigorfile.ts
harmony-app/docs/: ARCHITECTURE.md  bundle-strategy.md
harmony-app/docs/operations/: 03-hotfix-process.md
harmony-app/docs/release/: 03-rejection-response-toolkit.md
harmony-app/docs/specs/: 2026-04-26-audiobook-implementation.md  2026-05-17-harmony-app-feature-first-design.md  2026-05-17-harmony-app-feature-first-impl-plan.md
harmony-app/entry/: agconnect-services.json.example  build-profile.json5  oh-package.json5
harmony-app/entry/src/main/cpp/: CMakeLists.txt
harmony-app/marketing/: store-listing-zh.md
harmony-app/scripts/: check-import-boundary.mjs  fix-pr2-relative-paths.mjs  fix-pr3-ui-depth.mjs  fix-pr4-features-depth.mjs  fix-pr5-features-depth.mjs  fix-pr6-features-depth.mjs  rewrite-imports-multiline.mjs  rewrite-imports.mjs  rewrite-map-pr1.json  rewrite-map-pr2-inner.json  rewrite-map-pr2-sibling-fix.json  rewrite-map-pr2.json  rewrite-map-pr3-tests.json  rewrite-map-pr3.json  rewrite-map-pr4-tests.json  rewrite-map-pr4.json  rewrite-map-pr5-tests.json  rewrite-map-pr5.json  rewrite-map-pr6-tests.json  rewrite-map-pr6.json  rewrite-map-pr7-tests.json  rewrite-map-pr7.json
harmony-app/scripts/screenshots/: generate-screenshots.sh
harmony-app/scripts/test-rewrite/: expected.ets  fixture.ets  run-test.mjs  test-map.json
harmony-app/signing/: signing-config.json
infra/: README.md
infra/gitlab-ce/: .env.example  README.md  backup-config.md  docker-compose.yml  mirror-from-gitee.sh
infra/terraform/: .gitignore  README.md  staging.tf  staging.tfvars.example  variables.tf  versions.tf
marketing/: release-notes-template.md  screenshot-spec.md
marketing/scripts/: generate-screenshots.sh
napi-bridge/: .clangd  CMakeLists.txt  README.md  example-usage.ets
napi-bridge/include/: readmigo_typesetting_bridge.h
napi-bridge/src/: badge_engine_napi.cpp  typesetting_bridge.cpp  typesetting_napi.cpp
napi-bridge/src/common/: napi_convert.cpp  napi_convert.h  napi_error.cpp  napi_error.h
napi-bridge/stubs/napi/: native_api.h
native/: README.md
native/badge-engine/: CMakeLists.txt  README.md
native/badge-engine/presets/: badge_config.json
native/badge-engine/src/: c_api.cpp  engine.cpp  engine.h  lighting.cpp  lighting.h  material.cpp  material.h  renderer.cpp  scene.cpp  scene.h
native/typesetting/: CMakeLists.txt  README.md
native/typesetting/include/typesetting/: css.h  document.h  engine.h  interaction.h  layout.h  layout_profile.h  log.h  page.h  platform.h  platform_harmony.h  style.h  style_resolver.h
native/typesetting/src/: css.cpp  document.cpp  engine.cpp  interaction.cpp  layout.cpp  platform_harmony.cpp  style_resolver.cpp
native/typesetting/tests/: test_css.cpp  test_layout.cpp  test_se_integration.cpp  test_style_resolver.cpp
scripts/: build-native.sh  download-deveco.sh  qwen-auth-coding-plan.sh  qwen-readmigo.sh  setup-harmony-env.sh
scripts/sync/: readmigo-sync-manifest.json
server-cn/: .dockerignore  .env.example  Dockerfile  README.md  docker-compose.yml  jest.config.js  package.json  tsconfig.json  tsconfig.tsbuildinfo
server-cn/docs/backend/: 00-api-design.md
server-cn/scripts/: dev.sh  seed-demo-books.ts
server-cn/src/: app.module.ts  main.ts
server-cn/src/database/: data-source.ts  (+1 more)
tools/ai-coding/: README.md
(+618 files in other folders)
